# Battery-AAdhar

./: .gitignore  .golangci.yml  Dockerfile  Dockerfile.api  Dockerfile.core  Makefile  README.md  buf.gen.yaml  buf.yaml  dbschma.txt  docker-compose.test.yaml  docker-compose.yaml  go.work  go.work.sum
core/: Cargo.toml  build.rs  clippy.toml  errors.txt
core/migrations/: 20260421000000_initial_schema.sql
core/src/: errors.rs  lib.rs  main.rs
core/src/api/: auth.rs  battery.rs  bpa.rs  crypto.rs  lifecycle.rs  mod.rs
core/src/models/: alerts.rs  api_requests.rs  audit_logs.rs  batteries.rs  battery_descriptor.rs  battery_health.rs  battery_identifiers.rs  battery_keys.rs  battery_material_composition.rs  battery_registration_log.rs  carbon_footprint.rs  certificate_revocation_list.rs  certificates.rs  compliance_violation_log.rs  data_access_control.rs  data_access_execution_log.rs  data_classification.rs  dead_letter_queue.rs  dynamic_data_log.rs  idempotency_keys.rs  job_execution_log.rs  kek_keys.rs  key_destruction_log.rs  key_rotation_log.rs  manufacturers.rs  message_queue.rs  mod.rs  notifications.rs  ownership_history.rs  ownership_transfer_log.rs  qr_generation_log.rs  qr_records.rs  rate_limits.rs  recycling_certification_log.rs  recycling_records.rs  regions.rs  regulator_access_log.rs  reuse_certification_log.rs  reuse_history.rs  root_keys.rs  (+9 more)
core/src/repositories/: alerts.rs  api_requests.rs  audit_logs.rs  audit_repo.rs  batteries.rs  battery_health.rs  (+50 more)
core/tests/: auth_integration_test.rs  integration_test.rs  registration_integration_test.rs
(+94 files in other folders)
